[tool.poetry]
name = "birth-death"
version = "0.1.0"
description = ""
authors = ["Victor S. Miller <victor.miller@sri.com>"]
readme = "README.md"
packages = [{include = "birth_death"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
